--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
-}
+:root {
+  /* Primary colour scheme variations */
+  --c-primary: #000;
+  --c-primary-light: #000;
+  --c-primary-dark: #000;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  /* Secondary colour scheme variations */
+  --c-secondary: #000;
+  --c-secondary-light: #000;
+  --c-secondary-dark: #000;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+  /* Text colour scheme variations */
+  --c-text: #000;
+  --c-text-light: #000;
+  --c-text-dark: #000;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
